--- a/hobbies.html
+++ b/hobbies.html
@@ -40,11 +40,11 @@
           <li>Finish my anime watchlist</li>
           <li>Complete some crochet projects</li>
           <li>Naps that turn into full sleep cycles</li><br>
-          <img src="/images/sleep.webp" alt="Sleep" style="height: fit-content;" width="220px">
+          <img src="images/sleep.webp" alt="Sleep" style="height: fit-content;" width="220px">
         </ul>
 
       <h2 class="block-title">Something I'm never going to do</h2>
-      <img src="/images/rickroll.webp" alt="Rick Roll">
+      <img src="images/rickroll.webp" alt="Rick Roll">
     </div>
 
     <div class="block">
@@ -56,21 +56,21 @@
       <h1 class="block-title">Crochet</h1>
       <p>
         I've been crocheting since 4th grade.But all of a sudden I can't find everything I've done. I did give some out though. Some of my crochet projects include bags, purses, scarfs, slippers, shrug, and a lot of unfinished projects with scraps of wool everywhere <br>
-        <img src="/images/crochet1.jpg" alt="Crochet Picture 1" style="height: 200px;" width="200px">
-        <img src="/images/crochet2.jpg" alt="Crochet Picture 2" style="height: 200px;" width="200px">
-        <img src="/images/crochet3.jpg" alt="Crochet Picture 3" style="height: 200px;" width="200px">
+        <img src="images/crochet1.jpg" alt="Crochet Picture 1" style="height: 200px;" width="200px">
+        <img src="images/crochet2.jpg" alt="Crochet Picture 2" style="height: 200px;" width="200px">
+        <img src="images/crochet3.jpg" alt="Crochet Picture 3" style="height: 200px;" width="200px">
         <br>
-        <img src="/images/crochet4.jpg" alt="Crochet Picture 4" style="height: 200px;" width="200px">
-        <img src="/images/crochet5.jpg" alt="Crochet Picture 5" style="height: 200px;" width="200px">
-        <img src="/images/crochet12.jpg" alt="Crochet Picture 6" style="height: 200px;" width="200px">
+        <img src="images/crochet4.jpg" alt="Crochet Picture 4" style="height: 200px;" width="200px">
+        <img src="images/crochet5.jpg" alt="Crochet Picture 5" style="height: 200px;" width="200px">
+        <img src="images/crochet12.jpg" alt="Crochet Picture 6" style="height: 200px;" width="200px">
         <br>
-        <img src="/images/crochet7.jpg" alt="Crochet Picture 7" style="height: 200px;" width="200px">
-        <img src="/images/crochet8.jpg" alt="Crochet Picture 8" style="height: 200px;" width="200px">
-        <img src="/images/crochet9.jpg" alt="Crochet Picture 9" style="height: 200px;" width="200px">
+        <img src="images/crochet7.jpg" alt="Crochet Picture 7" style="height: 200px;" width="200px">
+        <img src="images/crochet8.jpg" alt="Crochet Picture 8" style="height: 200px;" width="200px">
+        <img src="images/crochet9.jpg" alt="Crochet Picture 9" style="height: 200px;" width="200px">
         <br>
-        <img src="/images/crochet10.jpg" alt="Crochet Picture 10" style="height: auto;" width="200px">
-        <img src="/images/crochet11.jpg" alt="Crochet Picture 11" style="height: auto;" width="200px">
-        <img src="/images/crochet6.jpg" alt="Crochet Picture 12" style="height: 150px;" width="200px">
+        <img src="images/crochet10.jpg" alt="Crochet Picture 10" style="height: auto;" width="200px">
+        <img src="images/crochet11.jpg" alt="Crochet Picture 11" style="height: auto;" width="200px">
+        <img src="images/crochet6.jpg" alt="Crochet Picture 12" style="height: 150px;" width="200px">
         <br>
       </p>
     </div>
@@ -98,7 +98,7 @@
       <h1 class="block-title">Hackathons and Coding</h1>
       <p>
         I kept this last cuz I am still building myself <br>
-        <img src="/images/underConstruction.gif" alt="Under Construction Gif">
+        <img src="images/underConstruction.gif" alt="Under Construction Gif">
         <br>
         Anyway I've been to some hackathons like 
         <ul>
@@ -115,7 +115,7 @@
        </ul>
 
        I just started learning coding during my gap year. 6 months into it now. This is my first solo hackathon.🥺😊 <br>
-       <img src="/images/littlebutHonest.webp" alt="little but Honest">
+       <img src="images/littlebutHonest.webp" alt="little but Honest">
       </p>
     </div> 
   </main>
