--- a/memes_timeMachine.html
+++ b/memes_timeMachine.html
@@ -26,7 +26,7 @@
           <h2 class="block-title">How do you see yourself in the 90's?</h2>
            <p>
             My answer: with SWAG <br>
-            <img src="/images/90'sSwag.png" alt="90's Swag gif" style="height: auto; width: 250px;">
+            <img src="images/90'sSwag.png" alt="90's Swag gif" style="height: auto; width: 250px;">
            </p>
 
            <h2 class="block-title">What about in 2025?</h2>
@@ -67,7 +67,7 @@
                 <li>By 2030, I'll have a collection of so many gigabytes of data that my computer calls me 'The collector'.</li>
                 <li>Manifesting that my future doesn't involve forgetting how to use Git.</li>
                 <li>Future me will have all the bugs figured out... right?</li>
-                <img src="/images/manifesting.webp" style="height: 300px;" width="500px">
+                <img src="images/manifesting.webp" style="height: 300px;" width="500px">
               </ul>
               </p>
 
@@ -82,13 +82,13 @@
             </p>
             
             <p>You can try to manifest your future as well😊</p>
-            <img src="/images/doIt.webp" alt=""><br>
+            <img src="images/doIt.webp" alt=""><br>
             <br>
             <label for="timeMachine" class="baitbutton">Time Machine</label>
             <input type="checkbox" id="timeMachine" style="display: none;">
 
             <div class="meme-container">
-            <img src="/images/404 6th.webp" alt="404 Error Meme" style="width: 100%; max-width: 300px;">
+            <img src="images/404 6th.webp" alt="404 Error Meme" style="width: 100%; max-width: 300px;">
             <p>"Oops! Looks you cant check it now. If you do, it wont happen😥😥"</p>
             </div>
         </div>
@@ -96,15 +96,15 @@
         <div class="block">
            <h3 class="block-title">Memes</h3>
            <p>I got bored and therefore i'm going to include memes because... why not?</p>
-           <img src="/images/cringebutFree.webp" alt="Cringe but free" class="memes">
-           <img src="/images/cryingBanana.webp" alt="Crying Banana" class="memes">
-           <img src="/images/everythinIsFake.webp" alt="Everything is Fake" class="memes">
-           <img src="/images/flyingani_sparkles.webp" alt="Flying animal with sparkles" class="memes">
-           <img src="/images/glassesCool.webp" alt="Glasses Cool" class="memes">
+           <img src="images/cringebutFree.webp" alt="Cringe but free" class="memes">
+           <img src="images/cryingBanana.webp" alt="Crying Banana" class="memes">
+           <img src="images/everythinIsFake.webp" alt="Everything is Fake" class="memes">
+           <img src="images/flyingani_sparkles.webp" alt="Flying animal with sparkles" class="memes">
+           <img src="images/glassesCool.webp" alt="Glasses Cool" class="memes">
            <br>
-           <img src="/images/queenNeverCry.webp" alt="Queen Never Cry" class="memes">
-           <img src="/images/tvSmile.png" alt="Tv Smile" class="memes">
-           <img src="/images/woww.webp" alt="Wow" class="memes">
+           <img src="images/queenNeverCry.webp" alt="Queen Never Cry" class="memes">
+           <img src="images/tvSmile.png" alt="Tv Smile" class="memes">
+           <img src="images/woww.webp" alt="Wow" class="memes">
          </div>
        </main>
 
