--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        <div class="side">
          <h2 class="block-title">Music Bar</h2>
           <p>Totally didn't put this part because of Stray kids🤭🤭</p> <br>
-          <img src="/images/SKZ.jpg" alt="Stray Kids" style="height: fit-content;" width="265px">
+          <img src="images/SKZ.jpg" alt="Stray Kids" style="height: fit-content;" width="265px">
           <a target="_blank" href="https://www.youtube.com/channel/UC9rMiEjNaCSsebs31MRDCRA" class="mylink">Their Youtube</a>
           <br>
           <br>
@@ -77,11 +77,11 @@
           <p>The Codedex Hackathon spanned over three days. So what I did during that time....</p>
           <ul>
             <li>Day 1: Gosh! I slept on the first day😴😴. Me fr</li><br>
-           <img src="/images/chillgif.webp" alt="Chill Guy"><br>
+           <img src="images/chillgif.webp" alt="Chill Guy"><br>
             <li>Day 2: Ouuhhh. The major work!! Coding, googling, finding memes, and repeat😪😪 </li><br>
-            <img src="/images/pressingKeyboard.webp" alt="Pressing Keyboard"><br>
+            <img src="images/pressingKeyboard.webp" alt="Pressing Keyboard"><br>
             <li>Day 3: Submitted!! and finally went to sleep. No, I'll catch up to my watchlist first. Then go to sleep. Just one more episode I said🤡 </li><br>
-            <img src="/images/relatable.webp" alt="Relatable Master Oougway" style="height: fit-content;" width="200px">
+            <img src="images/relatable.webp" alt="Relatable Master Oougway" style="height: fit-content;" width="200px">
           </ul>
         </div>
 
