added more memes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
      <meta charset="UTF-8" />
-     <link rel="icon" type="image/png" href="/images/star.png" />
+     <link rel="icon" type="image/png" href="images/star.png" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <title>EwaNet</title>
      <link rel="stylesheet" href="App.css">
@@ -27,6 +27,14 @@
           <p>Totally didn't put this part because of Stray kids🤭🤭</p> <br>
           <img src="images/SKZ.jpg" alt="Stray Kids" style="height: fit-content;" width="265px">
           <a target="_blank" href="https://www.youtube.com/channel/UC9rMiEjNaCSsebs31MRDCRA" class="mylink">Their Youtube</a>
+          <br>
+          <img src="images/s7.webp" style="height: 230px;" width="265px">
+          <img src="images/s1.webp" style="height: fit-content;" width="265px">
+          <img src="images/s3.webp" style="height: fit-content;" width="265px">
+          <img src="images/s4.webp" style="height: fit-content;" width="265px">
+          <img src="images/s6.webp" style="height: 230px;" width="265px">
+          <img src="images/s2.webp" style="height: 300px;" width="265px">
+          <br>
           <br>
           <br>
           <label for="clickbaitButton" class="baitbutton">Click Me</label>
@@ -56,9 +64,9 @@
             <br>
             P.S
             <br>
-            <img src="/images/walking_dog.gif" alt="A brown dog walking" style="height: fit-content;" width="65px">
+            <img src="images/walking_dog.gif" alt="A brown dog walking" style="height: fit-content;" width="65px">
             I would really love a dog but this is all I've got😥😥.
-            <img src="/images/walking_dog.gif" alt="A brown dog walking" style="height: fit-content;" width="65px">
+            <img src="images/walking_dog.gif" alt="A brown dog walking" style="height: fit-content;" width="65px">
            </p>
 
            <h3 class="block-title">My Links</h3>
