--- a/memes_timeMachine.html
+++ b/memes_timeMachine.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
      <meta charset="UTF-8" />
-     <link rel="icon" type="image/png" href="/images/star.png"/>
+     <link rel="icon" type="image/png" href="images/star.png"/>
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <title>EwaNet</title>
      <link rel="stylesheet" href="App.css">
@@ -96,15 +96,62 @@
         <div class="block">
            <h3 class="block-title">Memes</h3>
            <p>I got bored and therefore i'm going to include memes because... why not?</p>
-           <img src="images/cringebutFree.webp" alt="Cringe but free" class="memes">
-           <img src="images/cryingBanana.webp" alt="Crying Banana" class="memes">
-           <img src="images/everythinIsFake.webp" alt="Everything is Fake" class="memes">
-           <img src="images/flyingani_sparkles.webp" alt="Flying animal with sparkles" class="memes">
-           <img src="images/glassesCool.webp" alt="Glasses Cool" class="memes">
+           <img src="images/cringebutFree.webp" alt="Cringe but free" style="height: 150px;" width="150px">
+           <img src="images/cryingBanana.webp" alt="Crying Banana" style="height: 150px;" width="150px">
+           <img src="images/everythinIsFake.webp" alt="Everything is Fake" style="height: 150px;" width="150px">
+           <img src="images/flyingani_sparkles.webp" alt="Flying animal with sparkles" style="height: 150px;" width="150px">
+           <img src="images/glassesCool.webp" alt="Glasses Cool" style="height: 150px;" width="150px">
            <br>
-           <img src="images/queenNeverCry.webp" alt="Queen Never Cry" class="memes">
-           <img src="images/tvSmile.png" alt="Tv Smile" class="memes">
-           <img src="images/woww.webp" alt="Wow" class="memes">
+           <img src="images/queenNeverCry.webp" alt="Queen Never Cry" style="height: 150px;" width="150px">
+           <img src="images/tvSmile.png" alt="Tv Smile" style="height: 150px;" width="150px">
+           <img src="images/woww.webp" alt="Wow" style="height: 150px;" width="150px">
+           <img src="images/1.webp" style="height: 150px;" width="150px">
+           <img src="images/2.webp" style="height: 150px;" width="150px">
+           <br>
+           <img src="images/3.webp" style="height: 150px;" width="150px">
+           <img src="images/4.webp" style="height: 150px;" width="150px">
+           <img src="images/5.webp" style="height: 150px;" width="150px">
+           <img src="images/6.webp" style="height: 150px;" width="150px">
+           <img src="images/7.webp" style="height: 150px;" width="150px">
+           <br>
+           <img src="images/8.webp" style="height: 150px;" width="150px">
+           <img src="images/9.webp" style="height: 150px;" width="150px">
+           <img src="images/10.webp" style="height: 150px;" width="150px">
+           <img src="images/11.webp" style="height: 150px;" width="150px">
+           <img src="images/12.webp" style="height: 150px;" width="150px">
+           <br>
+           <img src="images/13.webp" style="height: 150px;" width="150px">
+           <img src="images/14.webp" style="height: 150px;" width="150px">
+           <img src="images/15.webp"style="height: 150px;" width="150px">
+           <img src="images/15.5.webp" style="height: 150px;" width="150px">
+           <img src="images/16.webp" style="height: 150px;" width="150px">
+           <br>
+           <img src="images/17.webp" style="height: 150px;" width="150px">
+           <img src="images/18.webp" style="height: 150px;" width="150px">
+           <img src="images/19.webp" style="height: 150px;" width="150px">
+           <img src="images/20.webp" style="height: 150px;" width="150px">
+           <img src="images/21.webp" style="height: 150px;" width="150px">
+           <br>
+           <img src="images/22.webp"style="height: 150px;" width="150px">
+           <img src="images/23.webp" style="height: 150px;" width="150px">
+           <img src="images/24.webp" style="height: 150px;" width="150px">
+           <img src="images/25.webp" style="height: 150px;" width="150px">
+           <img src="images/26.webp" style="height: 150px;" width="150px">
+           <br>
+           <img src="images/27.webp" style="height: 150px;" width="150px">
+           <img src="images/28.webp" style="height: 150px;" width="150px">
+           <img src="images/29.webp" style="height: 150px;" width="150px">
+           <img src="images/30.webp" style="height: 150px;" width="150px">
+           <img src="images/31.webp" style="height: 150px;" width="150px">
+           <br>
+           <img src="images/32.webp" style="height: 150px;" width="150px">
+           <img src="images/33.webp" style="height: 150px;" width="150px">
+           <img src="images/34.webp"style="height: 150px;" width="150px">
+           <img src="images/38.webp"style="height: 150px;" width="150px">
+           <img src="images/39.webp" style="height: 150px;" width="150px">
+           <br>
+           <img src="images/40.webp" style="height: 150px;" width="150px">
+           <img src="images/41.webp" style="height: 150px;" width="150px">
          </div>
        </main>
 
