--- a/hobbies.html
+++ b/hobbies.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/images/star.png"/>
+    <link rel="icon" type="image/png" href="images/star.png"/>
     <title>EwaNet</title>
     <link rel="stylesheet" href="App.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
@@ -90,7 +90,14 @@
         Well other ones I've watched: Jujutsu Kaisen, KNY, MHA, Tokyo revengers, Tokyo Ghoul(It fell off soo bad. I stopped watching at season 3), Bungo Stray Dogs, Seven Deadly Sins, Solo Leveling, The Apothecary Diaries, Spy x Family, Kakeguri, Eden Zero, Komi can't communicate, Wind Breaker, Chainsaw Man, Hell's Paradise, Assasination Classroom, Kaiju No 8, FireForce, Saiki K <i>chefs kiss💋💋, my first anime </i> and some more that I can't remember right now. <br>
 
         <br> Also go watch Voltron even though Netflix decided to remove it😭. Removing the good shows.
-        <br> For Manga, The beginning after the end👌💯. But as I said, I cant remeber everything right now.
+        <br> For Manga, The beginning after the end👌💯. But as I said, I cant remeber everything right now.<br>
+        <img src="images/a2.webp" style="height: 130px;" width="200px">
+        <img src="images/a3.webp" style="height: 130px;" width="200px">
+        <img src="images/a6.webp" style="height: 130px;" width="200px">
+        <br>
+        <img src="images/a4.webp" style="height: 180px;" width="150px">
+        <img src="images/a5.webp" style="height: 180px;" width="150px">
+        <img src="images/a1.webp" style="height: 180px;" width="150px">       
       </p>
     </div>
 
@@ -106,6 +113,9 @@
           <li>Brainrot hackathon🤪</li>
           <li>and this hackathon: Codedex Holiday Hackathon❄⛄.</li>
         </ul>
+        <img src="images/36.webp" style="height: 110px;" width="190px">
+        <img src="images/37.webp" style="height: 110px;" width="600px">
+        <br>
        I also have some coding skills like:
        <ul>
         <li>HTML</li>
