mobile phone compatible

--- a/hobbies.html
+++ b/hobbies.html
@@ -105,7 +105,7 @@
       <h1 class="block-title">Hackathons and Coding</h1>
       <p>
         I kept this last cuz I am still building myself <br>
-        <img src="images/underConstruction.gif" alt="Under Construction Gif">
+        <img src="images/underConstruction.gif" alt="Under Construction Gif" style="width: fit-content;">
         <br>
         Anyway I've been to some hackathons like 
         <ul>
@@ -114,7 +114,7 @@
           <li>and this hackathon: Codedex Holiday Hackathon❄⛄.</li>
         </ul>
         <img src="images/36.webp" style="height: 110px;" width="190px">
-        <img src="images/37.webp" style="height: 110px;" width="600px">
+        <img src="images/37.webp" class="onememe" style="height: 110px;" width="600px">
         <br>
        I also have some coding skills like:
        <ul>
@@ -125,7 +125,7 @@
        </ul>
 
        I just started learning coding during my gap year. 6 months into it now. This is my first solo hackathon.🥺😊 <br>
-       <img src="images/littlebutHonest.webp" alt="little but Honest">
+       <img src="images/littlebutHonest.webp" alt="little but Honest" style="width: fit-content;">
       </p>
     </div> 
   </main>
