--- a/memes_timeMachine.html
+++ b/memes_timeMachine.html
@@ -67,7 +67,7 @@
                 <li>By 2030, I'll have a collection of so many gigabytes of data that my computer calls me 'The collector'.</li>
                 <li>Manifesting that my future doesn't involve forgetting how to use Git.</li>
                 <li>Future me will have all the bugs figured out... right?</li>
-                <img src="images/manifesting.webp" style="height: 300px;" width="500px">
+                <img src="images/manifesting.webp" class="onememe" style="height: 300px;" width="500px">
               </ul>
               </p>
 
@@ -82,7 +82,7 @@
             </p>
             
             <p>You can try to manifest your future as well😊</p>
-            <img src="images/doIt.webp" alt=""><br>
+            <img src="images/doIt.webp" class="onememe"><br>
             <br>
             <label for="timeMachine" class="baitbutton">Time Machine</label>
             <input type="checkbox" id="timeMachine" style="display: none;">
