--- a/hobbies.html
+++ b/hobbies.html
@@ -55,7 +55,7 @@
     <div class="block">
       <h1 class="block-title">Crochet</h1>
       <p>
-        I've been crocheting since 4th grade.But all of a sudden I can't find everything I've done. I did give some out though. Some of my crochet projects include bags, purses, scarfs, slippers, shrug, and a lot of unfinished projects with scraps of wool everywhere <br>
+        I've been crocheting since 4th grade. But all of a sudden I can't find everything I've done. I did give some out though. Some of my crochet projects include bags, purses, scarves, slippers, a shrug, and a lot of unfinished projects with scraps of wool everywhere. <br>
         <img src="images/crochet1.jpg" alt="Crochet Picture 1" style="height: 200px;" width="200px">
         <img src="images/crochet2.jpg" alt="Crochet Picture 2" style="height: 200px;" width="200px">
         <img src="images/crochet3.jpg" alt="Crochet Picture 3" style="height: 200px;" width="200px">
@@ -78,19 +78,19 @@
     <div class="block">
       <h1 class="block-title">Reading</h1>
       <p>
-        Who knows what I read? Well light novels and e-books mainly. But I usually dont have enough time and not enough options. You can give some recs please. <br>
-        I've studied some physics textbook before. +1 point for me. I'm a reader.
+        Who knows what I read? Well, light novels and e-books mainly. But I usually don't have enough time and not enough options. You can give me some recs, please. <br>
+        I've studied some physics textbooks before. +1 point for me. I'm a reader.
       </p>
     </div>
 
     <div class="block">
       <h1 class="block-title">Anime/Manga</h1>
-      <p>Haha. favourite anime? hmmmmm dunno but I recommend watching Attack on titan. a pure comedy anime🤡🤡. Every time I watched a sports anime, it always motivated me to begin the sports. Eg.   Kuroko's Basketball, <del>Frame Lock</del> I mean Blue Lock😁, and I have not yet watch Haikyu. <br>
+      <p>Haha. Favorite anime? hmmmmm dunno but I recommend watching Attack on Titan. A pure comedy anime🤡🤡. Every time I watched a sports anime, it always motivated me to begin the sports. Eg.   Kuroko's Basketball, <del>Frame Lock</del> I mean Blue Lock😁, and I have not yet watched Haikyu. <br>
 
-        Well other ones I've watched: Jujutsu Kaisen, KNY, MHA, Tokyo revengers, Tokyo Ghoul(It fell off soo bad. I stopped watching at season 3), Bungo Stray Dogs, Seven Deadly Sins, Solo Leveling, The Apothecary Diaries, Spy x Family, Kakeguri, Eden Zero, Komi can't communicate, Wind Breaker, Chainsaw Man, Hell's Paradise, Assasination Classroom, Kaiju No 8, FireForce, Saiki K <i>chefs kiss💋💋, my first anime </i> and some more that I can't remember right now. <br>
+        Well other ones I've watched: Jujutsu Kaisen, KNY, MHA, Tokyo Revengers, Tokyo Ghoul(It fell off soo bad. I stopped watching at season 3), Bungo Stray Dogs, Seven Deadly Sins, Solo Leveling, The Apothecary Diaries, Spy x Family, Kakeguri, Eden Zero, Komi can't communicate, Wind Breaker, Chainsaw Man, Hell's Paradise, Assasination Classroom, Kaiju No 8, FireForce, Saiki K <i>chefs kiss💋💋, my first anime, </i> and some more that I can't remember right now. <br>
 
         <br> Also go watch Voltron even though Netflix decided to remove it😭. Removing the good shows.
-        <br> For Manga, The beginning after the end👌💯. But as I said, I cant remeber everything right now.<br>
+        <br> For Manga, The beginning after the end👌💯. But as I said, I can't remeMber everything right now.<br>
         <img src="images/a2.webp" style="height: 130px;" width="200px">
         <img src="images/a3.webp" style="height: 130px;" width="200px">
         <img src="images/a6.webp" style="height: 130px;" width="200px">
