--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
        </div>
 
         <div class="block">
-          <h1 class="block-title">🌐Welcome to EwaNet: My Personal Internet Portal</h1>
+          <h1 class="block-title">🌐Welcome to EwaNet: My Internet Portal</h1>
           <p>
             EwaNet is a retro-themed personal internet portal designed to:
             <ul>
@@ -58,7 +58,7 @@
         <div class="block">
            <h2 class="block-title">About Ewa</h2>
            <p>
-             Well, I'm a gap year student, likes food but forgets to eat on time somehow. hmmmm....
+             Well, I'm a gap year student, who likes food but forgets to eat on time somehow. hmmmm....
             <br>
             Everything public about me is on this website. Please check it out😁. I didn't know what else to write.
             <br>
@@ -88,7 +88,7 @@
            <img src="images/chillgif.webp" alt="Chill Guy"><br>
             <li>Day 2: Ouuhhh. The major work!! Coding, googling, finding memes, and repeat😪😪 </li><br>
             <img src="images/pressingKeyboard.webp" alt="Pressing Keyboard"><br>
-            <li>Day 3: Submitted!! and finally went to sleep. No, I'll catch up to my watchlist first. Then go to sleep. Just one more episode I said🤡 </li><br>
+            <li>Day 3: Submitted!! And finally went to sleep. No, I'll catch up to my watchlist first. Then go to sleep. Just one more episode I said🤡 </li><br>
             <img src="images/relatable.webp" alt="Relatable Master Oougway" style="height: fit-content;" width="200px">
           </ul>
         </div>
@@ -100,10 +100,10 @@
             
             <ul>
               <li>If I forget to save my work, did I ever really code it?</li>
-              <li>Is it just me, or do all tech issues happen after 10 PM.</li>
+              <li>Is it just me, or do all tech issues happen after 10 PM?</li>
               <li>Why do I always find the error after Googling it for 10 minutes?</li>
               <li>Why do I have 20 tabs open, but forget what I was searching for?</li>
-              <li>Is it that most tech companies have zero clue how to make chargers last longer? or what?</li>
+              <li>Is it that most tech companies have zero clue how to make chargers last longer? Or what?</li>
               <li>Is my Wi-Fi signal on a break or just mad at me? I promise I didn't offend it.</li>
               <li>I suddenly know how to code after watching YouTube at 2 AM.</li>
               <li>Am I the only one who thinks my phone vibrates randomly just to confuse me?</li>
