--- a/memes_timeMachine.html
+++ b/memes_timeMachine.html
@@ -48,7 +48,7 @@
             </p>
 
             <p>
-              <h3 class="topic">Something from the 90's as well</h3>
+              <h3 class="topic">Something from the 90's as well.</h3>
               <ul>
                 <li>This time machine runs on floppy disks and questionable fashion choices.</li>
                 <li>Welcome to the 90s, where dial-up internet is the boss and patience is a virtue!</li>
@@ -62,11 +62,11 @@
               <ul>
                 <li>In the future, my fridge will be smarter than me, but I'll still forget to eat.</li>
                 <li>No matter how far, my 'Future Ewa' will still tell me to check my code for errors.</li>
-                <li>By 2029, I'll have an entire drawer dedicated to just reusable hackathon swag.</li>
+                <li>By 2029, I'll have an entire drawer dedicated to reusable hackathon swag.</li>
                 <li>In the future, my 'future' self will still tell me to get more sleep.</li>
-                <li>By 2030, I'll have a collection of so many gigabytes of data that my computer calls me 'The collector'.</li>
+                <li>By 2030, I'll have a collection of so many gigabytes of data that my computer calls me 'The Collector'.</li>
                 <li>Manifesting that my future doesn't involve forgetting how to use Git.</li>
-                <li>Future me will have all the bugs figured out... right?</li>
+                <li>'Future me' will have all the bugs figured out... right?</li>
                 <img src="images/manifesting.webp" class="onememe" style="height: 200px;" width="200px">
               </ul>
               </p>
