--- a/hobbies.html
+++ b/hobbies.html
@@ -90,7 +90,7 @@
         Well other ones I've watched: Jujutsu Kaisen, KNY, MHA, Tokyo Revengers, Tokyo Ghoul(It fell off soo bad. I stopped watching at season 3), Bungo Stray Dogs, Seven Deadly Sins, Solo Leveling, The Apothecary Diaries, Spy x Family, Kakeguri, Eden Zero, Komi can't communicate, Wind Breaker, Chainsaw Man, Hell's Paradise, Assasination Classroom, Kaiju No 8, FireForce, Saiki K <i>chefs kiss💋💋, my first anime, </i> and some more that I can't remember right now. <br>
 
         <br> Also go watch Voltron even though Netflix decided to remove it😭. Removing the good shows.
-        <br> For Manga, The beginning after the end👌💯. But as I said, I can't remeMber everything right now.<br>
+        <br> For Manga, The beginning after the end👌💯. But as I said, I can't remember everything right now.<br>
         <img src="images/a2.webp" style="height: 130px;" width="200px">
         <img src="images/a3.webp" style="height: 130px;" width="200px">
         <img src="images/a6.webp" style="height: 130px;" width="200px">
