--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
            <ul>
             <li><a target="_blank" href="https://www.linkedin.com/in/oluwadamilola-edun/" class="mylink">LinkedIn</a></li>
             <li><a target="_blank" href="https://github.com/ewa-edun" class="mylink">Github</a></li>
-            <li><a>Discord: ewa-edun</a></li>
+            <li><a>Discord: ewa_edun</a></li>
             <li><a target="_blank" href="https://open.spotify.com/show/4fBnKhspTJbi5i8FY6hC2w?si=KDygOeTaQCOtdudB50yTUQ" class="mylink">Girl's girl Podcast</a></li>
             <li><a target="_blank" href="https://www.instagram.com/girls_girl_podcast/" class="mylink">Girl's girl Instagram</a></li>
             A podcast with my friends. Feel free to check it out too.
